# AV-Learn

./: README.md
c:cpp/: .gitignore  hello.c
c:cpp/Src/: test.c
c:cpp/Src/common/: c_1.c
c_cpp/: .gitignore  CMakeLists.txt
c_cpp/Src/: test.c
c_cpp/Src/common/: base.h  c_1.c  c_1.h  c_2.c  c_2.h  file_io.c  file_io.h
ndk/: README.md  gradle.properties
ndk/app/: .gitignore  build.gradle
ndk/app/src/main/: AndroidManifest.xml
ndk/app/src/main/cpp/: README.md  jni_common.c  jni_common.h  native-lib.c
ndk/app/src/main/java/com/dbboy/ndk/: MainActivity.java
ndk/app/src/main/java/com/dbboy/ndk/demo/: Child.java  Parent.java
ndk/app/src/main/java/com/dbboy/ndk/jni/: JniTest.java
ndk/app/src/main/res/layout/: activity_main.xml
ndk/app/src/main/res/values/: strings.xml
